<resources>
    <string name="app_name">App</string>
    <string name="txt_button_save">Save</string>
    <string name="txt_button_finish">Finish</string>
    <string name="txt_button_clear">Clear</string>
    <string name="txt_tittle">App list vip</string>
    <string name="txt_hint_edit_first_name">First name</string>
    <string name="txt_hint_edit_last_name">Last name</string>
    <string name="txt_hint_edit_name_of_the_desired_course">Name of the desired course</string>
    <string name="txt_hint_edit_contact_number">Contact number</string>
    <string name="text_hint_desired_course">Desired Course</string>
    <string name="msg_fields_cleared">Fields cleared</string>
    <string name="msg_always_come_back">Always come back, friend</string>
    <string name="msg_record_inserted">Record inserted</string>
    <string name="msg_please_fill_in_all_fields">Please fill in all fields</string>

<string-array name="itens_list">
    <item>Select the desired course</item>
    <item>Artificial Intelligence Basics</item>
    <item>Python Programming</item>
    <item>Mobile App Development with Android</item>
    <item>Data Science Essentials</item>
    <item>Cloud Computing Fundamentals</item>
    <item>Digital Marketing Strategies</item>
    <item>Cybersecurity Basics</item>
</string-array>



</resources>