<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c5c6c7"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/txt_tittle"
                android:textSize="24sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/editText_first_name"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="#7C6D6D"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txt_hint_edit_first_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/editText_last_name"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#7C6D6D"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txt_hint_edit_last_name"
                android:inputType="text" />

            <Spinner
                android:id="@+id/spinner_course"
                style="@android:style/Widget.DeviceDefault.Spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:hint="@string/text_hint_desired_course" />

            <EditText
                android:id="@+id/editText_contact_number"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#7C6D6D"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txt_hint_edit_contact_number"
                android:inputType="text"
                tools:ignore="TextFields" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp">

                <Button
                    android:id="@+id/button_save"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#4A4AA0"
                    android:text="@string/txt_button_save" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button_clear"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#4A4AA0"
                    android:text="@string/txt_button_clear" />
            </LinearLayout>

            <Button
                android:id="@+id/button_finish"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#3232C7"
                android:gravity="center"
                android:text="@string/txt_button_finish" />

        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>

